# Ignify

./: .gitignore  BUSINESS_SUMMARY.md  CLAUDE.md  README.md  deploy.sh  urtwin.md
services/backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  entrypoint.sh  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: a1b2c3d4e5f6_add_agents_and_marketing_plans.py  b2c3d4e5f6a7_add_email_verification.py  c3d4e5f6a7b8_add_content_templates.py  d4e5f6a7b8c9_add_video_asset_type.py  db3a7c3ea048_add_competitor_social_links.py  e5f6a7b8c9d0_add_pgvector_kb.py  e72092cedb6f_initial_schema.py  f6a7b8c9d0e1_add_content_experiments.py  ffbf9e88369a_merge_content_and_video_heads.py  g7b8c9d0e1f2_add_white_label_fields.py  h8c9d0e1f2a3_extend_seo_tables.py  i9d0e1f2a3b4_add_plan_prices.py  j0e1f2a3b4c5_add_plan_ad_strategy.py  k1f2a3b4c5d6_strategic_plan_fields.py  l2g3h4i5j6k7_add_plan_mode_to_marketing_plans.py  m3h4i5j6k7l8_social_post_content_link_publish_mode.py  n4i5j6k7l8m9_phase_expansion_snapshots_referrals_apikeys_webhooks.py  o5p6q7r8s9t0_tenant_ai_config.py  p6q7r8s9t0u1_subscription_gate.py  q7r8s9t0u1v2_social_refresh_token.py  r8s9t0u1v2w3_social_post_publishing_state.py  s9t0u1v2w3x4_social_post_publishing_started_at.py  t0u1v2w3x4y5_admin_settings_table.py
services/backend/app/: dependencies.py  main.py  worker.py
services/backend/app/agents/: __init__.py  base.py  checkpointer.py  models.py  plan_modes.py  registry.py  tracing.py
services/backend/app/agents/ads/: __init__.py  agent.py  state.py
services/backend/app/agents/analytics/: agent.py  state.py
services/backend/app/agents/competitor/: __init__.py  agent.py  state.py
services/backend/app/agents/content/: __init__.py  agent.py  state.py
services/backend/app/agents/creative/: __init__.py  agent.py  model_router.py  state.py
services/backend/app/core/: admin_settings.py  ai_budget.py  ai_guardrails.py  competitor_scraper.py  config.py  crypto.py  email.py  embeddings.py  gating.py  image_processing.py  llm.py  llm_json.py  logging.py  logging_config.py  meta_ads.py  openrouter_provisioning.py  pdf.py  pdf_charts.py  rate_limit.py  rate_limit_presets.py  rbac.py  security.py  seo.py  seo_audit.py  seo_audit_deep.py  storage.py  url_safety.py
services/backend/app/db/: database.py  models.py  seed.py
services/backend/app/skills/: base.py  registry.py
services/backend/reports/model_compare/: anthropic_claude-haiku-4.5.md  anthropic_claude-opus-4.6.md  anthropic_claude-sonnet-4.5.md  hybrid_anthropic_claude-opus-4.6_+_openai_gpt-4o.md  hybrid_google_gemini-3.1-pro-preview_+_openai_gpt-4o.md  openai_gpt-4.1.md  openai_gpt-4o-mini.md  openai_gpt-4o.md
services/backend/scripts/: encrypt_existing_tokens.py  regenerate_plan_hybrid.py  regenerate_plan_with_model.py  seed_demo_tenant.py  smoke_test.py
services/backend/tests/: conftest.py
services/backend/tests/integration/: test_admin_settings.py  test_ai_budget.py  test_approval_workflow.py  test_budget_sync_on_plan_change.py  test_cost_safety_end_to_end.py  test_creative_regen_limit.py  test_scheduler_claim.py  test_stuck_publishing_reaper.py
services/backend/tests/unit/: test_ai_guardrails.py  test_auth_password_field.py  test_config_validation.py  test_creative_model_router.py  test_creative_prompt_rules.py  test_crypto.py  test_crypto_rotation.py  test_oauth_state.py  test_openrouter_key_naming.py  test_ops_health.py  test_provider_audit.py  test_social_connector_tokens.py  test_url_safety.py  test_video_and_pricing_alignment.py  test_webhook_safety.py
(+533 files in other folders)
